# gradient_descent_algorithm

./: .gitignore  CMakeLists.txt  README.md  build.sh  run.sh
.github/workflows/: build-check-bot.yml  formatter.yml
include/: gradient_descent_node.hpp
src/: gradient_descent_node.cpp
